--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES2022",
+        "license": "NOLICENSE",
         "outDir": "./build",
         "moduleResolution": "Node",
         "strict": true,
